<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/login_title"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/primary"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editPhone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/no_account"
        android:textColor="@color/accent"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
