<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/tvChatTitle"
        android:text="@string/title_chat"
        android:textSize="20sp"
        android:textColor="@color/primary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
    <ListView
        android:id="@+id/listMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tvChatTitle"
        android:layout_above="@+id/chatarea"
        android:divider="@color/secondary"
        android:dividerHeight="1dp"/>
    <LinearLayout
        android:id="@+id/chatarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnSendMedia"
            android:src="@android:drawable/ic_menu_gallery"
            android:background="@android:attr/selectableItemBackground"
            android:tint="@color/primary"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
        <EditText
            android:id="@+id/etMessage"
            android:hint="@string/type_message"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSend"
            android:text="@string/send"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
